--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - Arif Slot</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Demo Gambar & Suara</title>
 </head>
-<body class="auth-body">
-  <div class="auth-container">
-    <h1>Login</h1>
-    <form id="loginForm">
-      <input type="text" id="loginUsername" placeholder="Username" required />
-      <input type="password" id="loginPassword" placeholder="Password" required />
-      <button type="submit">Masuk</button>
-      <p>Belum punya akun? <a href="register.html">Daftar</a></p>
-    </form>
-  </div>
-  <script src="auth.js"></script>
+<body style="font-family: sans-serif; text-align: center; padding: 40px;">
+  <h1>🎰 Demo Gambar dan Suara dari GitHub</h1>
+
+  <h2>🖼️ Gambar Slot</h2>
+  <img src="images/bell.png" alt="Bell" width="120">
+  <img src="images/cherry.png" alt="Cherry" width="120">
+  <img src="images/diamond.png" alt="Diamond" width="120">
+  <img src="images/lemon.png" alt="Lemon" width="120">
+  <img src="images/star.png" alt="Star" width="120">
+
+  <h2 style="margin-top: 40px;">🔊 Suara</h2>
+  <p>🎵 Musik Latar:</p>
+  <audio controls>
+    <source src="sounds/music.mp3" type="audio/mpeg">
+    Browser kamu tidak mendukung audio.
+  </audio>
+
+  <p style="margin-top: 20px;">🔁 Efek Suara:</p>
+  <button onclick="new Audio('sounds/spin.wav').play()">▶️ Putar Suara Spin</button>
+  <button onclick="new Audio('sounds/win.wav').play()">🏆 Putar Suara Menang</button>
+
+  <footer style="margin-top: 60px; font-size: 14px; color: gray;">
+    Dibuat oleh <b>arifcoding86</b> - ditampilkan via GitHub Pages
+  </footer>
 </body>
 </html>
